# Qt_Messenger

./: README.md
MessengerLANClient/: CMakeLists.txt  messengerconnectiondialog.cpp  messengerconnectiondialog.h  messengerconnectiondialog.ui  widget.cpp  widget.h  widget.ui
MessengerLANServer/: CMakeLists.txt  main.cpp  messengerserver.cpp  messengerserver.h  messengersocket.cpp  messengersocket.h
